Project

General

Profile

Actions

Bug #19396

closed

Objecter::epoch_barrier isn't respected in _op_submit()

Added by Ilya Dryomov about 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
Objecter
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
kraken,jewel,hammer
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Ops that are supposed to get paused until the barrier epoch is seen are never actually paused.


Related issues 3 (0 open3 closed)

Copied to Ceph - Backport #19494: hammer: Objecter::epoch_barrier isn't respected in _op_submit()RejectedActions
Copied to Ceph - Backport #19495: jewel: Objecter::epoch_barrier isn't respected in _op_submit()ResolvedShinobu KinjoActions
Copied to Ceph - Backport #19496: kraken: Objecter::epoch_barrier isn't respected in _op_submit()ResolvedShinobu KinjoActions
Actions #1

Updated by Ilya Dryomov about 7 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by Ilya Dryomov about 7 years ago

  • Backport set to kraken,jewel,hammer
Actions #3

Updated by Sage Weil about 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19494: hammer: Objecter::epoch_barrier isn't respected in _op_submit() added
Actions #5

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19495: jewel: Objecter::epoch_barrier isn't respected in _op_submit() added
Actions #6

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19496: kraken: Objecter::epoch_barrier isn't respected in _op_submit() added
Actions #7

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF