osdc/Objecter: respect epoch barrier in _op_submit()

Epoch barrier instructs us to avoid sending (i.e. pause) any OSD ops
until we see a barrier epoch.  The only thing epoch_barrier check in
target_should_be_paused() does is keep already paused ops paused.  We
need to actually pause incoming OSD ops in _op_submit().

Fixes: http://tracker.ceph.com/issues/19396
Signed-off-by: Ilya Dryomov <idryomov@gmail.com>
(cherry picked from commit f8e8efc0a53d7bd807cc0c2178aef7c4bed62ab7)